POM: Stop using git:// protocol with github.com
The GitHub platform is discontinuing support for it.

See: https://github.blog/2021-09-01-improving-git-protocol-security-github/#whats-changing

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/ctrueden/finite-state-machines</connection>
+		<connection>scm:git:https://github.com/ctrueden/finite-state-machines</connection>
 		<developerConnection>scm:git:git@github.com:ctrueden/finite-state-machines</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/ctrueden/finite-state-machines</url>
